# CCP-Digital-Marketing

./: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_COMPLETE.md  README.md  SECURITY.md  SUPPORT.md  TELEMETRY_CACHE_README.md  WAVE_4_SUMMARY.md  pyproject.toml  requirements-test.txt
.claude/commands/: code-review.md  deep-research.md  docs-update.md  evaluate.md  log-fix.md  pr-check.md  pr.md  push.md  tdd.md  team-plan.md  test-coverage.md
.claude/rules/: architecture-reference.md  logging.md
.github/: AUTONOMOUS_SCANNER_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SCANNER_QUICKSTART.md  AUTONOMOUS_SCANNER_STATUS.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/config/: protected-paths.json
.github/prompts/: issue-to-pr.md  nightly-code-review.md  nightly-docs-update.md
.github/scripts/: apply-docstrings.py  apply-type-hints.py  generate-docstrings.py  generate-type-hints.py  notify_slack.py  security-consensus.py
.github/workflows/: DEPLOYMENT_STATUS.md  ai-issue-triage.yml  ai-review-cost-monitor.yml  (+13 more)
cache_db/: repository.rs  schema.sql
ccp_marketing/: README.md  pyproject.toml
ccp_marketing/src/ccp_marketing/: __init__.py  __main__.py
ccp_marketing/src/ccp_marketing/adapters/: __init__.py  base.py  base_v2.py  luma.py  luma_v2.py  meetup.py  meetup_v2.py  partiful.py  partiful_v2.py
ccp_marketing/src/ccp_marketing/ai/: __init__.py  copy_generator.py  image_generator.py
ccp_marketing/src/ccp_marketing/browser/: __init__.py  element_resolver.py  tactical.py  verification.py
ccp_marketing/src/ccp_marketing/cli/: __init__.py  main.py
ccp_marketing/src/ccp_marketing/cli/commands/: __init__.py
ccp_marketing/src/ccp_marketing/core/: __init__.py  client.py  config.py  exceptions.py
ccp_marketing/src/ccp_marketing/models/: __init__.py  event.py  features.py  results.py
ccp_marketing/src/ccp_marketing/sessions/: __init__.py  registry.py  storage.py
ccp_marketing/src/ccp_marketing/social/: __init__.py  base.py  discord.py  facebook.py  instagram.py  linkedin.py  manager.py  twitter.py
ccp_marketing/src/ccp_marketing/state_machine/: __init__.py  checkpoint.py  machine.py  states.py
ccp_marketing/src/ccp_marketing/utils/: __init__.py  backoff.py  extraction.py  sanitization.py
ccp_marketing/src/ccp_marketing/workflows/: __init__.py  event_creation.py  full_workflow.py  social_promotion.py
ccp_marketing/tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_models.py  test_social.py  test_state_machine.py  test_utils.py  test_workflows.py
docs/: event-creation.md  social-post.md  social-promotion.md  troubleshooting.md
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: composio.rs  config.rs  db.rs  draft.rs  draft_commands.rs  main.rs  progress.rs  recipe_commands.rs
proxy/: .gitignore  Cargo.toml  test_cache.db  test_cache.db-shm
proxy/src/: interceptor.rs  lib.rs  main.rs  persistence.rs  persistence.rs.bak  persistence_schema_fix.txt  persistence_simple_test.txt  persistence_test_fix.patch  persistence_test_fix.rs  pii_mask.rs
recipes/: auth_setup.py  create_event.py  create_event_v2.py  email_reply.py  luma_create_event.py  meetup_create_event.py  partiful_create_event.py  social_post.py  social_promotion.py
scripts/: .env.example  draft_store.py  recipe_client.py  requirements.txt  validate_recipes.py
tests/: conftest.py  helpers.py  integration_test.sh  test_client_cli.py  test_client_details.py  test_client_execute.py  test_client_init.py  test_client_wrappers.py  test_draft_store.py  test_extract_data.py  test_extract_json.py  test_recipe_luma.py  test_recipe_meetup.py  test_recipe_partiful.py  test_recipe_social_post.py  test_recipe_social_promotion.py  test_redact.py  test_sanitize_input.py
(+19 files in other folders)
