[package]
name = "ccp-cache-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "ccp_cache_proxy"
path = "src/lib.rs"

[[bin]]
name = "ccp-cache-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http2"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
